2017-03-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/mailbox_local.c (lbml_load_messages_idle_cb): clear
	load_messages_id even when returning early.

2017-03-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Lock mailbox while accessing an idle callback id

	* libbalsa/mailbox.c (lbm_need_threading_idle_cb),
	(libbalsa_mailbox_msgno_inserted),
	(libbalsa_mailbox_msgno_removed): lock mailbox while accessing
	need_threading_idle_id.

2017-03-04  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (bw_master_position_cb),
	(bw_slave_position_cb), (bw_size_allocate_cb): remember the new
	position even if maximized.

2017-03-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

Use dialog buttons more consistently

	* src/mailbox-conf.c
	(create_generic_dialog): use GTK_RESPONSE_CANCEL instead of CLOSE
	(run_mailbox_conf): ditto.

2017-03-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use an idle callback to rethread the mailbox display.

	* libbalsa/mailbox.c (libbalsa_mailbox_finalize): remove an
	  outstanding idle source;
	  (lbm_need_threading_idle_cb): the idle callback;
	  (libbalsa_mailbox_check): schedule the idle callback;
	  (libbalsa_mailbox_msgno_inserted): ditto;
	  (libbalsa_mailbox_msgno_removed): ditto;
	  (libbalsa_mailbox_sync_storage): just signal mailbox changed;
	  (lbm_check_idle): ref the mailbox here...
	  (lbm_queue_check): not here.
	* libbalsa/mailbox.h: add guint
	  LibBalsaMailbox::need_threading_idle_id;
	  we no longer need LIBBALSA_MAILBOX_UNTHREADED.
	* libbalsa/mailbox_local.c (lbml_info_setup):
	  LIBBALSA_MAILBOX_UNTHREADED is now irrelevant.

2017-02-21  Peter Bloomfield  <pbloomfield@bellsouth.net>

	gtk_show_uri is deprecated in favor of gtk_show_uri_on_window

	* libbalsa/identity.c (help_ident_cb): fix it.
	* libbalsa/smtp-server.c (smtp_server_response): fix it, and
	  correct the help file URI.
	* src/address-book-config.c (create_local_dialog): fix it, and